# c2ffidef

./: CMakeLists.txt  LICENSE  README.md
src/: ast_nodes.hpp  ctypes_gen.cpp  ctypes_gen.hpp  generator.hpp  main.cpp  parser.cpp  parser.hpp  php_ffi_gen.cpp  php_ffi_gen.hpp  validator.cpp  validator.hpp
tests/: audio.h  collections.h  constants.h  cpplib.hpp  geometry.h  test.h  testlib.c  testlib.cpp
